logs/validate.20260408-035323.log
Mode: isolate
Isolate: including Chap38 Chap37 Chap41 Chap18 Chap19 Chap23 Chap02
error[E0425]: cannot find value `elem` in this scope
   --> src/Chap41/ArraySetEnumMtEph.rs:740:25
    |
740 |                     if (elem as int) < self.universe_size as int {
    |                         ^^^^ not found in this scope

error[E0425]: cannot find value `elem` in this scope
   --> src/Chap41/ArraySetEnumMtEph.rs:741:33
    |
741 |                         let k = elem as int / 64;
    |                                 ^^^^ not found in this scope

error[E0425]: cannot find value `elem` in this scope
   --> src/Chap41/ArraySetEnumMtEph.rs:742:33
    |
742 |                         let j = elem as int % 64;
    |                                 ^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 8s
Sampled Memory Usage: peak rust_verify RSS: 5262MB, peak z3 RSS: 705MB, min free: 20871MB
Sampled CPU Usage: rust_verify: 97s, z3 children: 71s
